--- a/client/src/styles/tailwind.css
+++ b/client/src/styles/tailwind.css
@@ -5,7 +5,6 @@
 @layer components {
   .button {
     @apply inline-block text-xs font-bold text-center uppercase border rounded;
-
   }
 
   .button.blue {
@@ -15,6 +14,6 @@
     @apply bg-blue-300 border-blue-300;
   }
   .button.blue.hollow {
-    @apply text-blue-500 border-blue-500 bg-transparent
+    @apply text-blue-500 border-blue-500 bg-transparent;
   }
 }
