--- a/client/src/styles/tailwind.css
+++ b/client/src/styles/tailwind.css
@@ -8,11 +8,9 @@
   }
 
   .button.blue {
-    @apply text-white uppercase bg-blue-500 border-blue-500;
+    @apply text-white uppercase bg-blue-500 border-blue-500 hover:bg-blue-300 hover:border-blue-300 disabled:bg-blue-300 disabled:border-blue-300;
   }
-  .button.blue:hover {
-    @apply bg-blue-300 border-blue-300;
-  }
+
   .button.blue.hollow {
     @apply text-blue-500 border-blue-500 bg-transparent;
   }
